tests/ui/lint/snapshots/superseded_api_same_result.snap
---
source: tests/ui/lint/mod.rs
---
  ● Superseded API
   ╭─[test.lis:6:3]
 5 │   let mut xs = [3, 1, 2]
 6 │   sort.Ints(xs)
   ·   ────┬────
   ·       ╰── no longer modern Go
 7 │ }
   ╰────
  help: Use `slices.Sort` instead · code: [lint.superseded_api]
