tests/ui/lint/snapshots/task_nested_defer_inputs_warn.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Call evaluated before the `task` starts
    ╭─[main.lis:16:15]
 15 │   task consume_pair(({
 16 │     defer log(name())
    ·               ───┬──
    ·                  ╰── runs on the caller
 17 │     1
    ╰────
  help: Move the work into a `task { ... }` block to run it in the task, or bind it with `let` first to make the order visible · code: [lint.task_argument_call]
