tests/ui/lint/snapshots/task_receiver_call.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Call evaluated before the `task` starts
    ╭─[test.lis:17:8]
 16 │ fn main() {
 17 │   task make_worker().run()
    ·        ──────┬──────
    ·              ╰── runs on the caller
 18 │ }
    ╰────
  help: Move the work into a `task { ... }` block to run it in the task, or bind it with `let` first to make the order visible · code: [lint.task_argument_call]
